--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-ionicons": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-token-auth": "^2.3.8",
