Refactor OrdersMade component and add CenterModal component

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,5 @@
 SECRET_KEY=5f40bd21e6021885200e1c94
 SQLALCHEMY_TRACK_MODIFICATIONS=False
+DEVELOPMENT_DATABASE_URI=sqlite:///dev.db
+PRODUCTION_DATABASE_URI=sqlite:///production.db
+TEST_DATABASE_URI=sqlite:///test.db
