--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,13 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "datatables.net-dt": "^2.0.3",
     "flutterwave-react-v3": "^1.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
@@ -18,7 +20,6 @@
     "react-token-auth": "^2.3.8",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
