--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,6 @@ SECRET_KEY=5f40bd21e6021885200e1c94
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 DEVELOPMENT_DATABASE_URI=sqlite:///dev.db
 PRODUCTION_DATABASE_URI=sqlite:///production.db
+DEBUG=False
+SQLALCHEMY_ECHO=False
 TEST_DATABASE_URI=sqlite:///test.db
