--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,6 +12,7 @@ Flask-Migrate==4.0.7
 flask-restx==1.3.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+gunicorn==21.2.0
 importlib_resources==6.4.0
 inflection==0.5.1
 itsdangerous==2.1.2
@@ -21,6 +22,7 @@ jsonschema-specifications==2023.12.1
 Mako==1.3.2
 MarkupSafe==2.1.5
 mypy-extensions==1.0.0
+packaging==24.0
 PyJWT==2.8.0
 python-decouple==3.8
 pytz==2024.1
